http server source draft

--- a/include/aaronia_rtsa/CMakeLists.txt
+++ b/include/aaronia_rtsa/CMakeLists.txt
@@ -23,5 +23,5 @@
 ########################################################################
 install(FILES
     api.h
-    DESTINATION include/aaronia_rtsa
+    rtsa_http_server_source.h DESTINATION include/aaronia_rtsa
 )
